--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "logger": "0.0.1",
     "method-override": "^2.3.6",
+    "passport": "^0.3.2",
+    "passport-strava-oauth2": "^0.1.3",
     "session": "^0.1.0"
   }
 }
